--- a/scss/base/_media-query.scss
+++ b/scss/base/_media-query.scss
@@ -25,6 +25,10 @@
     .logo {
         width: 50%;
     }
+
+    .imgQuiensoy {
+        max-width: 90%;
+    }
 }
 
 @media screen and (max-width: 800px) {
